<resources>
    <string name="app_name">JBProgressIndicator Sample</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="continue_button">Continue</string>
    <string name="visible">Visible</string>
    <string name="invisible">Invisible</string>
    <string name="set_to_0_percent">0%</string>
    <string name="set_to_25_percent">25%</string>
    <string name="set_to_50_percent">50%</string>
    <string name="set_to_75_percent">75%</string>
    <string name="set_to_100_percent">100%</string>
    <string name="animation_rate">Rate:</string>
    <string name="left_to_right">LTR</string>
    <string name="right_to_left">RTL</string>
</resources>
