<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:jb="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvProgressType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingTop="5dp"
        android:text="Progress Type:"
        android:textSize="16sp"/>


    <RadioGroup
        android:id="@+id/rgProgressTypes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvProgressType"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="40dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rbIndeterminate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onRadioButtonClicked"
            android:text="Indeterminate"/>

        <RadioButton
            android:id="@+id/rbDeterminate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onRadioButtonClicked"
            android:text="Determinate"/>

    </RadioGroup>

    <ToggleButton
        android:id="@+id/tbShowHide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rgProgressTypes"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:checked="true"
        android:onClick="onShowHideProgressIndicatorChange"
        android:textOff="@string/invisible"
        android:textOn="@string/visible"/>

    <ToggleButton
        android:id="@+id/tbIndeterminateModeAnimationDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rgProgressTypes"
        android:layout_marginBottom="20dp"
        android:layout_toRightOf="@id/tbShowHide"
        android:checked="false"
        android:onClick="onChangeIndeterminateModeDirection"
        android:textOff="@string/left_to_right"
        android:textOn="@string/right_to_left"/>

    <TextView
        android:id="@+id/tvAnimationRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tbShowHide"
        android:text="@string/animation_rate"/>

    <LinearLayout
        android:id="@+id/llAnimationRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tbShowHide"
        android:layout_toRightOf="@id/tvAnimationRate"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <SeekBar
            android:id="@+id/sbAnimationRateIndeterminateMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:max="100"
            android:minWidth="300dp"/>

        <SeekBar
            android:id="@+id/sbAnimationRateDeterminateMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:max="3000000"
            android:minWidth="300dp"
            android:visibility="invisible"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPercentButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llAnimationRate"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:visibility="invisible">

        <Button
            android:id="@+id/btnSetTo0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxWidth="23dp"
            android:onClick="setPercent"
            android:tag="0"
            android:text="@string/set_to_0_percent"/>

        <Button
            android:id="@+id/btnSetTo25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_toRightOf="@id/btnSetTo0"
            android:maxWidth="23dp"
            android:onClick="setPercent"
            android:tag="25"
            android:text="@string/set_to_25_percent"/>

        <Button
            android:id="@+id/btnSetTo50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_toRightOf="@id/btnSetTo25"
            android:maxWidth="23dp"
            android:onClick="setPercent"
            android:tag="50"
            android:text="@string/set_to_50_percent"/>

        <Button
            android:id="@+id/btnSetTo75"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_toRightOf="@id/btnSetTo50"
            android:maxWidth="23dp"
            android:onClick="setPercent"
            android:tag="75"
            android:text="@string/set_to_75_percent"/>

        <Button
            android:id="@+id/btnSetTo100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_toRightOf="@id/btnSetTo75"
            android:maxWidth="23dp"
            android:onClick="setPercent"
            android:tag="100"
            android:text="@string/set_to_100_percent"/>

    </LinearLayout>

    <info.johannblake.widgets.jbprogressindicatorlib.JBProgressIndicator
        android:id="@+id/jbProgressIndicator"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_alignParentBottom="true"
        android:visibility="visible"
        jb:animationRateDeterminateMode="1.5"
        jb:animationRateIndeterminateMode="800"
        jb:indeterminateModeRTL="false"
        jb:indicatorType="indeterminate"/>

</RelativeLayout>
